registro temporal para administradores(para mostrar funcionalidad en presentacion), login, discriminacion de roles y validacion de tokens funcionando